refactor(backend): timer 도메인 정리
- TimerState: @PrePersist 제거, create() 팩토리로 createdAt/updatedAt 이관 (Todo/TodoSession 패턴 복원)
- TimerService: DataIntegrityViolationException 재시도 경로에서 newVersion 재계산 — 병렬 PUT race 단조증가 회귀 방어
- SseEmitterRegistry: broadcast/heartbeat 예외 swallowing으로 SSE 실패가 DB 트랜잭션 롤백에 영향 없음
- TimerController: validateToken → parseToken 단일 호출로 통합, member role 가드 명시
- TimerStateRepository: stale cleanup 쿼리 추가 (deleteStaleByUserId, @Modifying 벌크 DELETE)
- 테스트 +9 케이스 (TimerControllerTest 5 신규, SseEmitterRegistryTest 4 신규)